--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ My project/UserSettings
 My project/Assets/Resources
 My project/Assets/Scenes
 First Game
+My project/.vsconfig
+My project/Assembly-CSharp.csproj
+My project/My project.sln
