--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ First Game
 My project/.vsconfig
 My project/Assembly-CSharp.csproj
 My project/My project.sln
+My project/Assets/Unity UI Samples
 *.meta
