--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+First Game
 My project/.vs
 My project/Library
 My project/Logs
@@ -7,9 +8,9 @@ My project/ProjectSettings
 My project/UserSettings
 My project/Assets/Resources
 My project/Assets/Scenes
-First Game
 My project/.vsconfig
 My project/Assembly-CSharp.csproj
 My project/My project.sln
 My project/Assets/Unity UI Samples
+My project/Assets/Scripts/.vs
 *.meta
