--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ My project/Assembly-CSharp.csproj
 My project/My project.sln
 My project/Assets/Unity UI Samples
 My project/Assets/Scripts/.vs
+My project/Temp
 *.meta
