--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,15 @@ My project/UserSettings
 My project/Assets/Resources/Art
 My project/Assets/Resources/Prefabs
 My project/Assets/Resources/Sounds
+My project/Assets/Resources/Textures
 My project/Assets/Scenes
 My project/.vsconfig
 My project/Assembly-CSharp.csproj
 My project/My project.sln
 My project/Assets/Unity UI Samples
+My project/Assets/GreatswordofFrozenNight
 My project/Assets/Scripts/.vs
+My project/Assets/Animations
 My project/Temp
+
 *.meta
